# mcp-conformance

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  RELEASING.md  SECURITY.md  clippy.toml  deny.toml  mutants.toml
.cargo/: config.toml  mutants.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  mutants.yml  pages.yml  release.yml  scheduled.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  conformance-results.md  corpus.md  introduction.md  trace-format.md
conformance/: agreement-divergences.json  client-agreement-divergences.json  coverage-manifest.json  expected-failures.yaml
corpus/: README.md
corpus/golden/: base-001-request-id-boolean.json  base-002-request-id-null.json  base-003-request-id-reuse.json  base-004-request-answered-twice-cross-flavor.json  base-004-result-unknown-id.json  base-005-notification-with-id.json  base-006-error-missing-message.json  base-007-error-code-float.json  base-008-jsonrpc-version.json  base-009-error-unknown-id.json  base-010-response-without-result.json  base-019-meta-key-bad-prefix.json  comp-001-capability-undeclared.json  http-session.json  life-001-first-message-not-initialize.json  life-002-initialize-missing-protocolversion.json  life-003-missing-initialized.json  life-004-client-request-before-init-response.json  life-005-server-request-before-initialized.json  life-006-result-version-invalid.json  life-007-initialize-protocolversion-not-string.json  life-009-undeclared-capability-use.json  life-010-initialize-result-missing-capabilities.json  log-001-capability-undeclared.json  page-002-cursor-never-issued.json  prom-001-capability-undeclared.json  prom-003-image-data-invalid.json  prom-004-audio-data-invalid.json  prom-005-embedded-resource-malformed.json  res-001-capability-undeclared.json  res-004-uri-bad-scheme.json  res-006-blob-not-base64.json  stdio-feature-session.json  stdio-full-session.json  stdio-minimal-init.json  tool-001-capability-undeclared.json  tool-003-input-schema-null.json  tool-005-name-length.json  tool-006-name-charset.json  tool-008-name-duplicate.json  (+12 more)
corpus/good/: http-session.jsonl  stdio-feature-session.jsonl  stdio-full-session.jsonl  (+1 more)
crates/mcp-conformance-core/: Cargo.toml  README.md
crates/mcp-conformance-core/benches/: canonical.rs
crates/mcp-conformance-core/proptest-regressions/: canonical.txt
crates/mcp-conformance-core/registry/2025-11-25/: base.json  completion.json  lifecycle.json  logging.json  pagination.json  prompts.json  resources.json  sources.json  tools.json  transport-streamable-http.json  transport.json
crates/mcp-conformance-core/src/: applies.rs  canonical.rs  capability.rs  lib.rs  message.rs  requirement.rs  revision.rs  trace.rs
crates/mcp-conformance-core/src/canonical/: scalar.rs
crates/mcp-conformance-core/src/requirement/: registry.rs  set.rs
crates/mcp-everything-server/: Cargo.toml  README.md
crates/mcp-everything-server/src/: fixtures.rs  http.rs  interactive.rs  lib.rs  logging.rs  main.rs  notifying.rs  policy.rs  prompts.rs  resources.rs  server.rs  tap.rs  tools.rs
crates/mcp-everything-server/src/tap/: sse.rs  writer.rs
crates/mcp-everything-server/tests/: cli.rs  http_policy.rs  roundtrip.rs  tap_recording.rs
crates/mcp-reference-host/: Cargo.toml  README.md
crates/mcp-reference-host/src/: capture.rs  connect.rs  handler.rs  lib.rs  main.rs  resume.rs  retry.rs  run.rs  scenario.rs  script.rs
crates/mcp-reference-host/src/resume/: tests.rs
crates/mcp-reference-host/tests/: agent_loop.rs  host_cli.rs  server_initiated.rs  transports.rs
crates/mcp-trace-validator/: Cargo.toml  README.md
crates/mcp-trace-validator/benches/: README.md  validate.rs
crates/mcp-trace-validator/src/: context.rs  engine.rs  junit.rs  lib.rs  main.rs  multi.rs  reader.rs  report.rs
crates/mcp-trace-validator/src/checks/: base.rs  lifecycle.rs  mod.rs  negotiation.rs  prompts.rs  resources.rs  support.rs  tools.rs  transport.rs  utilities.rs
crates/mcp-trace-validator/src/checks/base/: meta.rs
crates/mcp-trace-validator/src/context/: draft.rs  pairing.rs
crates/mcp-trace-validator/tests/: cli.rs  golden.rs  pathological.rs  readme_examples.rs
docs/reports/pmcp-harness/: Cargo.toml
docs/reports/pmcp-harness/checks/: completion-complete.checks.json  dns-rebinding-protection.checks.json  elicitation-sep1034-defaults.checks.json  elicitation-sep1330-enums.checks.json  logging-set-level.checks.json  ping.checks.json  prompts-get-embedded-resource.checks.json  prompts-get-simple.checks.json  prompts-get-with-args.checks.json  prompts-get-with-image.checks.json  prompts-list.checks.json  resources-list.checks.json  resources-read-binary.checks.json  resources-read-text.checks.json  resources-subscribe.checks.json  resources-templates-read.checks.json  resources-unsubscribe.checks.json  server-initialize.checks.json  server-sse-multiple-streams.checks.json  tools-call-audio.checks.json  tools-call-elicitation.checks.json  tools-call-embedded-resource.checks.json  tools-call-error.checks.json  tools-call-image.checks.json  tools-call-mixed-content.checks.json  tools-call-sampling.checks.json  tools-call-simple-text.checks.json  tools-call-with-logging.checks.json  tools-call-with-progress.checks.json  tools-list.checks.json
docs/reports/pmcp-harness/src/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/canonical_json/: seed-message  seed-negative-zero-fold
fuzz/corpus/registry_parse/: seed-builtin
fuzz/corpus/trace_parse/: seed-violation
fuzz/fuzz_targets/: canonical_json.rs  registry_parse.rs  trace_parse.rs
xtask/: Cargo.toml
xtask/src/: agreement.rs  changelog_links.rs  conformance.rs  coverage.rs  cross_arch.rs  deferrals.rs  docs_links.rs  local_gates.rs  main.rs  minimal_versions.rs  spec_drift.rs  version_sync.rs
xtask/src/agreement/: artifacts.rs  manifest.rs  tests.rs
xtask/src/conformance/: client.rs
(+77 files in other folders)
