# SPDX-License-Identifier: MIT
# Copyright 2026 Tom F. (https://github.com/tomtom215)

[workspace]
resolver = "3"
members = [
    "crates/mcp-conformance-core",
    "crates/mcp-trace-validator",
    "crates/mcp-everything-server",
    "crates/mcp-reference-host",
    "xtask",
]

[workspace.package]
edition = "2024"
# MSRV policy (docs/plan/decisions/0008-msrv-1.88.md): 1.88 is the lowest bound
# we verify in CI. It is forced by rmcp (undeclared upstream): rmcp's `macros`
# feature pulls darling 0.23.0, which requires 1.88 (empirically re-verified
# 2026-06-15, ADR-0008 §Correction). Our own code also uses let-chains (1.88).
# Bumps are minor releases with a changelog entry.
rust-version = "1.88"
version = "0.3.0"
license = "MIT"
authors = ["Tom F."]
repository = "https://github.com/tomtom215/mcp-conformance"
homepage = "https://github.com/tomtom215/mcp-conformance"

[workspace.dependencies]
# Version ranges carry upper bounds (the a2a-rust convention): floors are the
# oldest versions we test against; caps prevent silent major-version drift.
serde = { version = ">=1.0.220, <2", features = ["derive"] }
# float_roundtrip is required correctness, not an optimization preference: without
# it serde_json's float *parsing* may be 1 ULP off its own output, which breaks
# parse(canonical(v)) == v — caught by the canonical-JSON property tests.
serde_json = { version = ">=1.0.127, <2", features = ["float_roundtrip"] }

# CLI parsing — binaries only, behind each crate's `cli` feature
# (docs/plan/decisions/0005-cli-argument-parsing.md).
clap = { version = ">=4.5, <5", features = ["derive"] }

# M2 server stack (per-dependency justification: the table in
# docs/plan/04-engineering-standards.md §Dependency policy).
#
# rmcp is the official Rust SDK the everything-server proves parity against;
# ADR-0008 raised the workspace MSRV to its measured 1.88 floor. Features are
# the minimum for "every capability over stdio and streamable HTTP": no
# client, no auth, no reqwest, no child-process transport.
rmcp = { version = ">=1.7, <3", default-features = false, features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    # Three suite scenarios (tools-call-elicitation, SEP-1034, SEP-1330)
    # require raw `elicitation/create` requests with exact schemas.
    "elicitation",
] }
# Async runtime — rmcp's requirement, not a choice this workspace re-litigates.
# No default features; each crate enables exactly what it uses.
tokio = { version = ">=1.45, <2", default-features = false }
# Tool/prompt parameter schemas for rmcp's `#[tool]` macros (rmcp's `server`
# feature already carries schemars; this direct dependency is for the derive).
schemars = { version = ">=1.1, <2" }
# HTTP serving for the streamable transport — the idiom rmcp's own examples
# use (Router::nest_service + axum::serve). Feature-minimal: no JSON
# extractors, no macros; the MCP service does its own body handling.
axum = { version = ">=0.8, <0.9", default-features = false, features = ["http1", "tokio"] }
# Dev-only: tower's ServiceExt::oneshot drives the axum app in-process, so
# the 403 integration tests never open a socket.
tower = { version = ">=0.5.2, <0.6", default-features = false, features = ["util"] }

# Dev/test only.
proptest = { version = ">=1.4, <2" }
# Benchmarks only. Default features off (no rayon, no plotters/HTML reports):
# benches measure and print, they do not gate — benches/README.md records that
# decision — so the cargo-bench harness support is all that is needed.
criterion = { version = ">=0.7, <0.9", default-features = false, features = ["cargo_bench_support"] }

# Workspace-internal crates.
mcp-conformance-core = { version = "0.3.0", path = "crates/mcp-conformance-core" }
mcp-trace-validator = { version = "0.3.0", path = "crates/mcp-trace-validator" }
mcp-everything-server = { version = "0.3.0", path = "crates/mcp-everything-server" }

# Cancellation tokens for the host's bounded loop (ADR-0009): already in the
# tree as rmcp's own dependency; the direct use is the cooperative stop
# condition 02-architecture.md promises ("no 'the loop usually terminates'").
tokio-util = { version = ">=0.7.9, <0.8", default-features = false }

# The host's SSE-resumption path (ADR-0009 §Amendment 2026-06-12) drives
# rmcp's public `StreamableHttpClient` seam, whose only shipped
# implementation is `reqwest::Client` — naming that type requires the direct
# dependency. Already in the tree via rmcp's
# `transport-streamable-http-client-reqwest` feature at the same version;
# default-features off (no TLS backend: conformance traffic is loopback).
# Floor mirrors rmcp 1.7.0's own `reqwest = "0.13.2"` requirement.
reqwest = { version = ">=0.13.2, <0.14", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Group lints at `warn` with reduced priority so the targeted levels below can
# override individual lints; CI escalates all warnings to errors via RUSTFLAGS.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Not part of pedantic/nursery; test modules may opt out locally and visibly.
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
strip = true
