# SPDX-License-Identifier: MIT
# Copyright 2026 Tom F. (https://github.com/tomtom215)

[package]
name = "mcp-everything-server"
description = "Reference MCP server exercising every protocol capability (in progress); ships the default-secure HTTP transport policy first"
readme = "README.md"
keywords = ["mcp", "conformance", "server", "reference", "testing"]
categories = ["development-tools::testing"]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# The library (handler, routers, policy) has no CLI dependencies; the binary
# needs clap and a runtime. Library consumers can use
# `default-features = false` (docs/plan/decisions/0005-cli-argument-parsing.md).
default = ["cli", "http"]
cli = ["dep:clap", "http", "tokio/macros", "tokio/rt-multi-thread", "tokio/signal"]
# Streamable HTTP serving (axum app + policy middleware). Off → stdio-only
# library/binary without the HTTP dependency tree.
http = ["dep:axum", "tokio/net"]
# Session trace tap for the agreement check
# (docs/plan/03-conformance-strategy.md §Calibration): records admitted HTTP
# sessions as validator-ready JSON Lines traces. Off the default set so the
# server offered upstream carries no conformance-toolkit dependency unless
# asked to. (tokio-stream is already an unconditional floor-shim dependency
# below; the tap simply uses it.)
tap = ["http", "dep:mcp-conformance-core", "tokio/fs", "tokio/io-util"]

# docs.rs builds with every feature enabled so feature-gated APIs are documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
mcp-conformance-core = { workspace = true, optional = true }
# The notification-staging tools sleep between messages ("~50ms" is part of
# the scenario contract), so the library needs tokio's clock; the runtime
# itself still comes from the binary or the test harness.
tokio = { workspace = true, features = ["time"] }

# Minimal-versions floor shims: direct declarations whose only job is to
# repair under-specified floors in third-party manifests so
# `-Zminimal-versions` builds (the CI "Minimal versions" job). Each names the
# broken requirement; remove when upstream fixes it.
#
# sse-stream 0.2.x declares http-body-util "0.1" but imports BodyDataStream,
# which first appeared in 0.1.2 (verified against docs.rs).
http-body-util = ">=0.1.2"
# rmcp 1.7.0 declares tokio-util "0.7" but uses the `tokio_util::bytes`
# re-export, introduced in 0.7.9 (verified against tokio repo tags).
tokio-util = ">=0.7.9"
# Two floors meet here; the tighter one wins. rmcp 1.7.0 declares
# tokio-stream "0.1" but uses `tokio_stream::wrappers` (needs 0.1.1), and
# the tap (feature `tap`) uses `StreamExt::then`, which first appears in
# 0.1.9 (verified against the published crates: absent in 0.1.8's source,
# present in 0.1.9's). No longer only a shim for rmcp — this crate depends
# on tokio-stream directly.
tokio-stream = ">=0.1.9"
# rmcp 1.7.0 declares tracing "0.1" but its `#[instrument]` functions use
# let-else (needs the syn-2 tracing-attributes line) and newer `Value` impls;
# 0.1.41 is the empirically verified building floor.
tracing = ">=0.1.41"

[dev-dependencies]
# In-process protocol round-trips: a real rmcp client drives the server over
# `tokio::io::duplex` — full initialize/list/call exchanges, no sockets, no
# subprocesses (the no-network-in-tests rule stays intact).
rmcp = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
proptest = { workspace = true }
# Closes the tap→validator serialization contract with a fast, network-free
# test: the tap's actual output bytes must parse and validate through the
# real reader (the agreement check proves this end to end, but only in the
# npx-gated conformance job; this runs it on every platform in the matrix).
# No dependency cycle: the validator never depends on this crate.
mcp-trace-validator = { path = "../mcp-trace-validator" }

[[bin]]
name = "mcp-everything-server"
path = "src/main.rs"
required-features = ["cli"]

[lints]
workspace = true
