# SPDX-License-Identifier: MIT
# Copyright 2026 Tom F. (https://github.com/tomtom215)

[package]
name = "mcp-reference-host"
description = "Reference MCP host and agent loop (in progress); ships the deterministic retry/backoff policy first"
readme = "README.md"
keywords = ["mcp", "conformance", "host", "client", "testing"]
categories = ["development-tools::testing"]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# docs.rs builds with every feature enabled so feature-gated APIs are documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
