# SPDX-License-Identifier: MIT
# Copyright 2026 Tom F. (https://github.com/tomtom215)

[package]
name = "mcp-reference-host"
description = "Reference MCP host: scriptable client handlers and a bounded, deterministic agent loop (transports and suite wiring in progress)"
readme = "README.md"
keywords = ["mcp", "conformance", "host", "client", "testing"]
categories = ["development-tools::testing"]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# docs.rs builds with every feature enabled so feature-gated APIs are documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = []

[dependencies]
# The host is an rmcp client (ADR-0009): handlers, the client role, and the
# in-process duplex transport the tests drive. Network transports (child
# process, streamable HTTP) arrive with the binary in a later slice.
rmcp = { workspace = true, features = ["client", "transport-io", "elicitation"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
tokio-util = { workspace = true }

[dev-dependencies]
mcp-everything-server = { workspace = true }
proptest = { workspace = true }
# The probe server in tests/server_initiated.rs drives the host's handlers
# through real wire dispatch (roots/list, URL elicitation, completion
# notifications) — the only way to invoke the ClientHandler trait methods.
rmcp = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util"] }

[lints]
workspace = true
