# SPDX-License-Identifier: MIT
# Copyright 2026 Tom F. (https://github.com/tomtom215)

[package]
name = "mcp-trace-validator"
description = "Deterministic offline validator for recorded Model Context Protocol traces: requirement-level findings, machine-readable reports"
readme = "README.md"
keywords = ["mcp", "conformance", "validator", "testing", "protocol"]
categories = ["development-tools::testing", "command-line-utilities"]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# The library engine has no CLI dependencies; the binary needs clap. Library
# consumers can use `default-features = false` to drop it
# (docs/plan/decisions/0005-cli-argument-parsing.md).
default = ["cli"]
cli = ["dep:clap"]

# The stateless `2026-07-28` lifecycle variant (SEP-2575): a second state-machine
# variant alongside the `2025-11-25` one, gated off while the draft moves. Carries no
# runtime dependencies; enabling it only compiles in the `context::draft` module
# (docs/plan/02-architecture.md §Protocol-revision strategy, roadmap M2.5).
draft-2026-07-28 = []

# docs.rs builds with every feature enabled so feature-gated APIs are documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
mcp-conformance-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "validate"
harness = false

[[bin]]
name = "mcp-trace-validator"
path = "src/main.rs"
required-features = ["cli"]

[lints]
workspace = true
